Change clock format from full month to abbreviated

--- a/config/V4.2b/config.jsonc
+++ b/config/V4.2b/config.jsonc
@@ -125,7 +125,7 @@
     "on-click": "omarchy-launch-or-focus-tui btop"
   },
   "clock": {
-    "format": "{:%B %d | %H:%M}",
+    "format": "{:%b %d | %H:%M}",
     "format-alt": "{:L%d %B W%V %Y}",
     "tooltip-format": "<span>{calendar}</span>",
     "calendar": {
